--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-/*1.반응형수업>풀스크린동영상사이트 참조*/
-/*2.jquery>마우스오버시영상재생 참조*/
-/*3.jquery>마우스휠 참조*/
 *{margin:0; padding:0;}
 ul{list-style:none;}
 a{text-decoration:none; color:inherit;}
@@ -109,7 +106,7 @@ html,body{
   transition:all 0.5s;
   z-index:10;
 }
-.side:hover{right:-500px; opacity:0.8;}/*마우스 오버시 왼쪽으로 미끄러지듯 낱오면서 좀더 해당 영역을 선명하게 만듬*/
+.side:hover{right:-500px; opacity:0.8;}
 .side > .contents{
   width:400px;
   height:100%;
@@ -120,7 +117,7 @@ html,body{
   transition:all 1s;
 }
 .side:hover > .contents{
-  left:50px;/*마우스 오버시 왼쪽으로 미끄러지듯 이동*/
+  left:50px;
 }
 /*contents내 썸네일*/
 .side .contents p{
@@ -150,8 +147,8 @@ html,body{
   transform:translateX(200px);
   transition:all 1.2s;
 }
-/*transform:translateX(200px)을 설정하여 현재 위치 기준으로 오른쪽으로 200px만큼 위치시킵니다. 이때 transition을 각각 다르게 설정하여시간차 효과를 만들어 줍니다.*/
-.side:hover .contents p{/*side에 마우스 오버시 후손인 p태그의 위치를 원래위치로 돌아가게 만듭니다.*/
+/*원래위치로 변경*/
+.side:hover .contents p{
   transform:translateX(0px);
 }
 .side .contents p em{
@@ -170,7 +167,7 @@ html,body{
   color:paleturquoise;
   transform:skewX(40deg);
 }
-.side:hover .btnContents{left:700px;}/*해당 요소를 오른쪽 밖으로 보내 화면상에서 숨겨줍니다.*/
+.side:hover .btnContents{left:700px;}
 .btnContents i{
   font-size:60px;
   position:absolute;
@@ -188,7 +185,7 @@ html,body{
 @keyframes ani{
   0%{right:0; transform:scale(1); opacity:1;}
   100%{right:100px; transform:scale(1.5); opacity:0;}
-}/*화살표가 왼쪽으로 100px 지점으로 이동하며 1.5배 커짐과 동시에 서서히 투명해집니다.*/
+}
 
 /*cruise*/
 .cruise{
@@ -210,7 +207,7 @@ article{
   width:12%;
   height:100%;
   background:url(../img/divider.png) no-repeat left center;
-  float:right;/*오른쪽에서 왼쪽으로 정렬*/
+  float:right;
   overflow:hidden;
   z-index: 1;
 }
@@ -283,7 +280,7 @@ article p{
 }
 /*article 제목 hover효과*/
 article:hover h2{color:#ccc; border-color:#ccc;}
-article:hover .back{top:280px; height:60px;}/*배경요소를 위로 올리면서 높이를 적용하여 위아래로 펼치는 효과를 만들어 줍니다.*/
+article:hover .back{top:280px; height:60px;}
 article:hover .bg_vid{opacity:0.4;}
 
 /*화면전환 버튼 scroll-icon-box*/
